# using-rust-in-non-rust-servers

./: .gitignore  justfile  readme.md  targets.txt
node/: package-lock.json  package.json  server.js
node/tier-0-no-rust/: generate-qr.js
node/tier-1-rust-cli/: generate-qr.js
node/tier-2-rust-wasm/: generate-qr.js
node/tier-2-rust-wasm-bindgen/: generate-qr.js
node/tier-3-rust-native/: generate-qr.js
rust/: Cargo.toml
rust/monitor-process/: Cargo.toml  build.rs
rust/monitor-process/src/: fallback.rs  lib.rs  linux.rs  main.rs
rust/qr-cli/: Cargo.toml
rust/qr-cli/src/: main.rs
rust/qr-lib/: Cargo.toml
rust/qr-lib/src/: lib.rs
rust/qr-napi/: Cargo.toml
rust/qr-napi/src/: lib.rs
rust/qr-server/: Cargo.toml
rust/qr-server/src/: main.rs
rust/qr-wasm/: Cargo.toml
rust/qr-wasm-bindgen/: Cargo.toml
rust/qr-wasm-bindgen/src/: lib.rs
rust/qr-wasm/src/: lib.rs
