[workspace]
members = [
    "qr-lib",
    "qr-cli",
    "qr-wasm-bindgen",
    "qr-wasm",
    "qr-napi",
    "qr-server",
    "monitor-process",
]
resolver = "2"

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
